@@ -56,6 +56,16 @@ bootJar {
   	} 
 }
 
+ bootRun {
+   jvmArgs = ["--add-modules", "java.se", 
+  "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+  "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+  "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+  "--add-opens", "jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED",
+  "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
 repositories {
 	mavenCentral()
 	maven { url 'https://jitpack.io' }
